# postprocess-sdist-make-rust-ext-opt

./: README.md  postprocess-sdist-make-rust-ext-opt.py  postprocess_sdist_make_rust_ext_opt.py  pyproject.toml
.github/workflows/: test-build-release.yml
tests/: test_postprocess_sdist.py
tests/datafixtures/: expected_setup_after_postprocessing.py  setup_without_rust_ext_optional_arg.py
tests/datafixtures/mypkg/: setup.py
