[tool.poetry]
name = "postprocess-sdist-make-rust-ext-opt"
version = "0.1.2"
description = "Post-process sdists to make Rust extensions optional"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
packages = [
  { include = "postprocess_sdist_make_rust_ext_opt.py" }
]
readme = "README.md"

[tool.poetry.scripts]
postprocess-sdist-make-rust-ext-opt = 'postprocess_sdist_make_rust_ext_opt:app'

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
redbaron = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-datafixtures = "^1.0.0"
setuptools-rust = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
